--- a/views/start.pug
+++ b/views/start.pug
@@ -1,6 +1,6 @@
 html
 	body
-		h1 Thanks for using our Flash Card Helper!
+		h1 Thanks for using Flash Card Buddy!
 		br
 		form(method="POST", action="/upload", encType="multipart/form-data")
 			#form-body
@@ -14,7 +14,7 @@ html
 				input.btn.btn-primary(type="submit", value="Start!")
 		br
 		br
-		form(method="GET", action="/sample_quiz")
-			#form-body
-				label Or, click here to use a sample set of cards.
-				input.btn.btn-primary(type="submit", value="Take the sample quiz")
+		//- form(method="GET", action="/sample_quiz")
+		//- 	#form-body
+		//- 		label Or, click here to use a sample set of cards.
+		//- 		input.btn.btn-primary(type="submit", value="Take the sample quiz")
